# galaxyDL-Python

./: .gitignore  API_REFERENCE.md  ARCHIVAL_FEATURES.md  DELISTED_BUILDS.md  GENERATION_DETECTION.md  IMPLEMENTATION.md  LICENSE  MULTITHREADING_V1.md  QUICKSTART.md  README.md  STRUCTURE.md  TESTING.md  example.py  pyproject.toml  requirements-dev.txt  requirements-gui.txt  requirements.txt  verify_raw_manifests.py
docs/: COMPLETE_ARCHIVAL.md  LIBRARY_API_COMPARISON.md  PATCHES.md  PATCH_IMPLEMENTATION.md  PATCH_QUICKSTART.md  PATCH_V2_STRUCTURE.md  RGOG_FORMAT.md  SFC_SUPPORT.md  WEB_DOWNLOADER.md
examples/: README.md  analyze_sizes.py  analyze_v1_manifests.py  archive_game.py  audit_manifests.py  build_selection.py  delisted_builds.py  download_game.py  download_patches.py  download_patches_v2_structure.py  download_selective_quick.py  download_web.py  download_witcher2_patches.py  extract_rgog_manifests.py  list_library.py  manage_dependencies.py  rgog.py  test_auto_detection.py  test_gui_login.py  test_patch_framework.py  v1_download.py  v2_download.py  validate_game.py
examples/rgog/: README.md  UNPACK_GUIDE.md  WORKFLOW_GUIDE.md  __init__.py  common.py  extract.py  info.py  list.py  pack.py  unpack.py  verify.py
galaxy_dl/: __init__.py  api.py  auth.py  cli.py  constants.py  dependencies.py  diff.py  downloader.py  gui_login.py  models.py  utils.py  web.py
